--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-UPSTAGE_API_KEY = "up_6hWVyo8SumgT0GGXOrGS14U8vgpAE"
-FILE_PATH = "D2406194-3.pdf"
+UPSTAGE_API_KEY = "YOUR_UPSTAGE_API_KEY"
+FILE_PATH = "YOUR_FILE_PATH"
